src/test/ui/error-codes/E0532.stderr
error[E0532]: expected tuple struct/variant, found constant `StructConst1`
  --> $DIR/E0532.rs:15:9
   |
LL |         StructConst1(_) => { },
   |         ^^^^^^^^^^^^ not a tuple struct/variant

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0532"
